# PersonalScripts

./: .gitignore  README.md  RU2CN  ass_switch_to_utf8.sh  class-dump  compress_epub.sh  detective_conan_ass_fix.sh  dragon_ball_ssa_fix.sh  force_clear_trash  manga_rename.sh  npm_uninstall_all  ramdisk.sh  rename_recursively.sh  restore_xcode_configuration.sh  update_nsf_kit.sh
epub/: compress_epub.sh  content_opf_generate.sh  ebook_2_zip.sh  generate_contentopf.sh  pyproject.toml  toc_ncx_generate.sh
epub/format_xhtml/: format_xhtml.py
epub/shell script/: compress_epub.sh  content_opf_generate.sh  toc_ncx_generate.sh
epub/src/: epub_2_zip.py  format_xhtml.py
epub/src/epub.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
manga/: batch_unzip.sh  check_pages_consistent.sh  convert_chinese_numbers_to_arab.sh  copy_manga_pages.sh  crop_last_manga_page.sh  extract_first_page.sh  flatten_folder.sh  generate_source_file.sh  images_2_zips.sh  manga2avif.sh  ocr_batch.sh  ocr_process.sh  organize_images.sh  pyproject.toml  rename_manga_pages.sh  show_first_image_res.sh  split_volume_into_chapters.py  unzip_all.sh  zip_sub_folders.sh
manga/crop_manga_pages/: crop_manga_pages.py
manga/image_blender/: image_blender.py
manga/page_concat/: page_concat.py
manga/shell script/: check_page_width.sh  convert_chinese_numbers_to_arab.sh  convert_page_2_avif.sh  jpeg_2_jpg.sh  keywords_searching.sh  magick_wrapper.sh  ocr_process.sh  pages_organize_into_chapters.sh  replace_first_page.sh  unzip_all.sh
manga/src/: convert_cn_numbers_to_arab.py  convert_image_format_to.py  double_page_crop.py  hentai_zip_rename_inside.py  insert_numbers_in_front_of_chapter_titles.py  page_blender.py  page_concat.py  split_volume_into_chapters.py  volume_split_into_chapters.py
python/: rebuild_venv.sh
python/format_xhtml/: format_xhtml.py  requirements.txt
