[project]
name = "manga"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "lxml>=6.0.1",
    "pillow>=11.3.0",
    "pyobjc>=11.1",
]

[project.scripts]
double-page-crop = "double_page_crop:main"
page-blender = "page_blender:main"
page-concat = "page_concat:main"
volume-split-into-chapters = "volume_split_into_chapters:main"
hentai-zip-rename-inside = "hentai_zip_rename_inside:main"
convert-image-format-to = "convert_image_format_to:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages]
find = { where = ["src"] }
